# Dockerfile_generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.jinja  Dockerfile_build_stages.jinja  Dockerfile_commands.jinja  Dockerfile_metadata.jinja  LICENSE  README.md  alpine_3.18.2_config.json  alpine_config.json  debian_config.json  debian_x_config.json  example.sh  index.html  pyproject.toml  test.jinja  test.txt  tox.ini
.github/workflows/: deploy_to_github_pages.yml  lint.yml  test_dockerfiles_build.yml
build_stage_templates/alpine/rc/: Dockerfile_plan9_build_stage.jinja
build_stage_templates/debian/heirloom/: Dockerfile_heirloom_build_stage.jinja
builder/: Dockerfile
command_templates/: alpine-apk-testing.jinja  apk.jinja  apt-get.jinja
commands/: alpine-apk-testing.jinja  apk.jinja  apt-get.jinja
configs/: alpine.json  debian.json  ubuntu.json  ubuntu_gcc.json  ubuntu_shells.json
macros/: build_stages.jinja  commands.jinja  image_and_tag.jinja  labels.jinja  metadata.jinja  version_pinner.jinja  versioned_param_list.jinja
new/: Dockerfile_new_config.jinja  alpine_new_config.json
scratch/: Dockerfile  test.jinja  test_user.jinja
skeleton/: Dockerfile.jinja  Dockerfile_build_stages.jinja  Dockerfile_commands.jinja  alpine_config.json  helper.jinja
source_builds/alpine/heirloom/: heirloom_build_stage.jinja
source_builds/alpine/rc/: Dockerfile_plan9.jinja  Dockerfile_plan9_build_stage.jinja
source_builds/debian/heirloom/: Dockerfile_heirloom_build_stage.jinja
source_builds/heirloom/: build_heirloom.sh
src/: dockerfile_generator.py
src/dockerfile_generator/: __main__.py  main.py
templates/: Dockerfile.jinja
templates/command_templates/: apk.jinja
templates/macros/: build_stages.jinja  image_and_tag.jinja  versioned_param_list.jinja
tests/: example_alpine.sh  fixtures.py  show_test_parameters.bat  test.sh  test_case_parameters.py  test_cli.py  test_jinja2_cli.py
tests/docker_build/: test_building_Dockerfiles.py
tests/expected/: Dockerfile
tests/hadolint/: test_hadolint_generated_Dockerfiles.py
tests/labels/: test.sh  ubuntu_shells_labels.json
tests/pinned_versions/: alpine_pinned.json  test.sh
tests/select_filter_on_dict/: test.jinja  test.json  test.sh
web/: index.html
