[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerfile-generator"
version = "0.0.0"
license = {file = "LICENSE"}
authors = [
  { name="James Parrott", email="james.parrott@proton.me" },
]
description = "Jinja 2 templates (with example config files) to generate Dockerfiles."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jinja2",
]

optional-dependencies.testing = [
  "pytest>=7.4",
]


[project.urls]   # Private repo.
"Homepage" = "https://github.com/JamesParrott/Dockerfile_generator"
"Bug Tracker" = "https://github.com/JamesParrott/Dockerfile_generator/issues"
