[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerfile_generator"
version = "1.2.0"
license = {file = "LICENSE"}
authors = [
  { name="James Parrott", email="james.parrott@proton.me" },
]
description = "Jinja 2 templates (with example config files) to generate Dockerfiles."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "jinja2",
]

optional-dependencies.testing = [
  "pytest>=7.4",
]

[project.scripts]
dockerfile_generator = "dockerfile_generator.main:main" 

[project.urls]   
"Homepage" = "https://github.com/JamesParrott/Dockerfile_generator"
"Bug Tracker" = "https://github.com/JamesParrott/Dockerfile_generator/issues"

[tool.hatch.build.targets.wheel.force-include]
"templates" = "dockerfile_generator/templates"
"configs" = "dockerfile_generator/configs"